# a500_conda_code

./: .gitignore  Readme.rst  environment_linux.yml  environment_osx.yml
pybind11_basic/: clean_build.py  setup.py
pybind11_basic/recipe/: meta.yaml
pybind11_unique/: Readme.rst  clean_build.py  setup.py
pybind11_unique/make_unique/: __init__.py
pybind11_unique/recipe/: build.sh  meta.yaml  run_test.py
pybind11_unique/src/: main.cpp
pybind11_unique/tests/: test_pha.py
sam_cython/: .gitignore  CMakeLists.txt  Readme_install.rst  clean_build.py  setup.py
sam_cython/fortran_src/: read3D_wrapper.f90
sam_cython/include_fortran/: reader_wrapper.mod
sam_cython/recipe/: build.sh  meta.yaml  run_test.py
sam_cython/recipe/tests/: testit.py
sam_cython/sam_cython/: __init__.py  readbin3D.pyx
sam_cython/sam_cython/tests/: testit.py
